applications/arr-stack/base/posterr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: posterr
  labels:
    app: posterr
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: posterr
